added a good one

--- a/quotes.org
+++ b/quotes.org
@@ -103,6 +103,10 @@ racing. The rest are merely games."
 
 
 * Humor
+"Obviously when you were a child your parents built you a swing facing the wall.
+ [hand actions]"
+   - "Rowdy" Roddy Piper
+
 "In the beginning the Universe was created. This has made a lot of people very
  angry and has been widely regarded as a bad move."
    - Douglas Adams
