--- a/quotes.org
+++ b/quotes.org
@@ -372,6 +372,10 @@ racing. The rest are merely games."
 “The majority is always wrong. The minority is rarely right.”
    - Henrik Ibsen
 
+"In our democracy, those who vote decide everything; those who count the vote
+  decide nothing."
+   - Judge Mark Walker
+
 "Nothing on the St. Anthony’s block is a remedy for homelessness, but the
  harmony shows that it is possible to create shared space and resources on a
  small scale—also known as a community."
