--- a/src/setup/settingUpLatex.org
+++ b/src/setup/settingUpLatex.org
@@ -8,6 +8,11 @@ https://tex.stackexchange.com/questions/315999/have-side-by-side-figures-in-late
 %%% TeX-master: "convection"
 %%% End:
 
+find width of document
+\usepackage{layouts}
+textwidth in inches: \printinunitsof{in}\prntlen{\textwidth}
+
+
 
 # Setting up Latex for Emacs
 
