--- a/quotes.org
+++ b/quotes.org
@@ -302,6 +302,14 @@ racing. The rest are merely games."
  person does in the end is what he intended to do all along."
    - Cus D'Amato
 
+"Many people are so worried about looking good that they never do anything
+ great. Many people are so worried about doing something great that they never
+ do anything at all.
+
+ You destroy that paralysis when you think of yourself as just a student, and
+ your current actions as just practice."
+   - [[https://sive.rs/below-average][Derek Sivers]]
+
 "If you want nothing, do what you want. If you want everything, develop
  discipline."
    - Kostya Tszyu
