--- a/quotes.org
+++ b/quotes.org
@@ -470,6 +470,9 @@ He "regarded all religions with the suspicion of a seasoned con man"
 "Existing order that is kept up."
    - Antonio Damasio, The Strange Order of Things
 
+"Brandolini’s Law still holds: “The amount of energy needed to refute bullshit
+  is an order of magnitude larger than to produce it."
+
 "I think it’s almost true without exception if you want to win a Nobel Prize,
  you should have a long attention span, get hold of some deep and important
  problem and stay with it for 10 years, that wasn’t my style."
