--- a/quotes.org
+++ b/quotes.org
@@ -120,8 +120,11 @@ racing. The rest are merely games."
 "Why don't you take your library card and fuck off."
    - Logan Roy, Succession 2:4
 
+Definition of self-evident: "Evident to one’s self and to nobody else."
+   - Ambrose Bierce
+
 "How does working on this case effect your sex life?"
-"Mine? Doesn't effect mine, it effects yours, go fuck yourself."
+"Mine? Doesn't effect mine, if it effects yours, go fuck yourself."
    - Manhunter, 49:45
 
 "Find the quote about the American insulting the King, and the Englishman
