--- a/quotes.org
+++ b/quotes.org
@@ -133,8 +133,6 @@ racing. The rest are merely games."
 
 "But there was always a moldy thrift store stink of irony about Weezer;"
 
-"On the planet emacs in the holy control tower" - spacemacs
-
 "Difficulty is a coin which the learned conjure with so as not to reveal the
  vanity of their studies and which human stupidity is keen to accept as payment"
    - Michel de Montaigne
@@ -453,6 +451,13 @@ end, a trap from which there’s no easy escape and maybe no desire for escape"
 "GPLv3: as worthy a successor as The Phantom Menace, as timely as Duke Nukem
  Forever, and as welcome as New Coke."
    - Rob Landley, [[http://lists.busybox.net/pipermail/busybox/2010-December/074114.html][Understanding the bin, sbin, usr/bin, usr/sbin split]]
+
+"Don’t go chasing waterfalls, please stick to the Vims and Emacs that you’re
+ used to."
+
+"On the planet emacs in the holy control tower" - spacemacs
+
+
 
 
 * Race
