--- a/quotes.org
+++ b/quotes.org
@@ -494,6 +494,12 @@ He "regarded all religions with the suspicion of a seasoned con man"
    - James Curis on W. C. Fields was an atheist
 
 
+* Self
+"But the suggestion that is may be useful to morally evaluate oneself before
+  volunteering to monitor everyone else's conduct isn't a ridiculous one."
+   - Elizabeth Bruenig, The New Moral Code of America's Elite, The Atlantic
+
+
 * Science
 "Existing order that is kept up."
    - Antonio Damasio, The Strange Order of Things
